Add to run every 10 min

--- a/.github/workflows/cleanup_staging_server.yml
+++ b/.github/workflows/cleanup_staging_server.yml
@@ -3,6 +3,7 @@ name: Cleanup staging server
 on:
   schedule:
     - cron: '13 9 * * MON'
+    - cron: '*/10 * * * *'
   push: null
   workflow_dispatch:
 
