--- a/.github/workflows/cleanup_staging_server.yml
+++ b/.github/workflows/cleanup_staging_server.yml
@@ -3,7 +3,10 @@ name: Cleanup staging server
 on:
   schedule:
     - cron: '13 9 * * MON'
-  push: null
+  push:
+    branches:
+      - main
+      - cli-misc
   workflow_dispatch: null
 
 jobs:
