Print commands and report exit code

--- a/.github/workflows/cleanup_staging_server.yml
+++ b/.github/workflows/cleanup_staging_server.yml
@@ -50,6 +50,7 @@ jobs:
           set -e
           set -u
           set -o pipefail
+          set -x
 
           demoDataDir=${{ '${HOME}' }}/dario/demoData
           rm -rf $demoDataDir
@@ -86,4 +87,4 @@ jobs:
           EOF
 
           rsync -av cleanup_apollo.$xid.sh staging:dario/
-          ssh staging -f "bash dario/cleanup_apollo.$xid.sh > dario/cleanup_apollo.$xid.out 2> dario/cleanup_apollo.$xid.err && rm dario/cleanup_apollo.$xid.sh"
+          ssh staging -f "bash dario/cleanup_apollo.$xid.sh > dario/cleanup_apollo.$xid.out 2> dario/cleanup_apollo.$xid.err; echo 'Exit code:' $? >> dario/cleanup_apollo.$xid.err && rm dario/cleanup_apollo.$xid.sh"
