--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -85,6 +85,14 @@ jobs:
             collaboration server
           cache-from: type=registry,ref=user/app:latest
           cache-to: type=inline
+  test-step:
+    name: Get file
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get file
+        run: |
+          pwd
+          ls
   deploy:
     name: Deploy to demo staging server
     runs-on: ubuntu-latest
@@ -122,9 +130,6 @@ jobs:
             IdentityFile ~/.ssh/staging
           END
           ssh-keyscan -H ${{ steps.ec2-describe-instances.outputs.INSTANCE_ADDRESS }} >> ~/.ssh/known_hosts
-      - name: Rsync plugin file
-        run: |
-          rsync -av packages/jbrowse-plugin-apollo/dist/jbrowse-plugin-apollo.umd.development.js staging:dario/
       - name: Create Docker context
         run: |
           docker context create staging \
@@ -149,4 +154,5 @@ jobs:
         run: |
           docker --context staging compose down
           docker --context staging compose pull
+          docker --context staging compose cp ~/packages/jbrowse-plugin-apollo/dist/jbrowse-plugin-apollo.umd.development.js /usr/local/apache2/htdocs/jbrowse-plugin-apollo.umd.production.min.js
           docker --context staging compose up --build --detach
