--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -39,8 +39,9 @@ jobs:
       - name: Copy plugin
         working-directory: packages/jbrowse-plugin-apollo
         run: |
+          ls -a ~/
           ls dist/
-          cp dist/jbrowse-plugin-apollo.umd.development.js ~/.github/workflows/deploy/
+          cp dist/jbrowse-plugin-apollo.umd.production.min.js ~/Apollo3/Apollo3/.github/workflows/deploy/
   lint:
     name: Lint
     runs-on: ubuntu-latest
