--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Copy plugin
         working-directory: packages/jbrowse-plugin-apollo
         run: |
-          cp dist/jbrowse-plugin-apollo.umd.production.min.js /home/runner/work/Apollo3/Apollo3/.github/workflows/deploy/
+          cp dist/jbrowse-plugin-apollo.umd.production.min.js ../../.github/workflows/deploy/
           echo $HOME
   lint:
     name: Lint
