--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -38,14 +38,24 @@ jobs:
         working-directory: packages/jbrowse-plugin-apollo
       - uses: actions/upload-artifact@v4
         with:
+          name: plugin
           path: |
             packages/jbrowse-plugin-apollo/dist/jbrowse-plugin-apollo.umd.development.js
             packages/jbrowse-plugin-apollo/dist/jbrowse-plugin-apollo.umd.production.min.js
   test-artifact:
     name: Test artifact
+    needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Check out
+        uses: actions/checkout@v3
       - uses: actions/download-artifact@v4
+        with:
+          name: plugin
+          path: packages/jbrowse-plugin-apollo/dist
+      - name: List files
+        run: |
+          ls -R
       - name: Test Display structure of downloaded files
         working-directory: .github/workflows/deploy
         run: |
@@ -113,6 +123,8 @@ jobs:
       - name: Check out
         uses: actions/checkout@v3
       - uses: actions/download-artifact@v4
+        with:
+          name: plugin
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
