--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -42,24 +42,6 @@ jobs:
           path: |
             packages/jbrowse-plugin-apollo/dist/jbrowse-plugin-apollo.umd.development.js
             packages/jbrowse-plugin-apollo/dist/jbrowse-plugin-apollo.umd.production.min.js
-  test-artifact:
-    name: Test artifact
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out
-        uses: actions/checkout@v3
-      - uses: actions/download-artifact@v4
-        with:
-          name: plugin
-          path: packages/jbrowse-plugin-apollo/dist
-      - name: List files
-        run: |
-          ls -R
-      - name: Test Display structure of downloaded files
-        working-directory: .github/workflows/deploy
-        run: |
-          ls -l ../../../packages/jbrowse-plugin-apollo/dist
   lint:
     name: Lint
     runs-on: ubuntu-latest
@@ -85,9 +67,9 @@ jobs:
     name: Build and push Docker image
     runs-on: ubuntu-latest
     if:
-      #${{ github.event_name == 'push' || inputs.publish }}
-      ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
-      inputs.publish }}
+      ${{ github.event_name == 'push' || inputs.publish }}
+      #${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
+      #inputs.publish }}
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -125,6 +107,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: plugin
+          path: .github/workflows/deploy/
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -173,8 +156,6 @@ jobs:
           URL: ${{ vars.URL }}
         working-directory: .github/workflows/deploy
         run: |
-          cp ../../../packages/jbrowse-plugin-apollo/dist/jbrowse-plugin-apollo.umd.development.js ./
-          cp ../../../packages/jbrowse-plugin-apollo/dist/jbrowse-plugin-apollo.umd.production.min.js ./
           docker --context staging compose down
           docker --context staging compose pull
           docker --context staging compose up --build --detach
