--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -36,6 +36,12 @@ jobs:
       - name: Build plugin
         run: yarn build
         working-directory: packages/jbrowse-plugin-apollo
+      - uses: actions/upload-artifact@v4
+        with:
+          name: plugin
+          path: |
+            packages/jbrowse-plugin-apollo/dist/jbrowse-plugin-apollo.umd.development.js
+            packages/jbrowse-plugin-apollo/dist/jbrowse-plugin-apollo.umd.production.min.js
   lint:
     name: Lint
     runs-on: ubuntu-latest
@@ -89,13 +95,17 @@ jobs:
     name: Deploy to demo staging server
     runs-on: ubuntu-latest
     environment: staging
-    needs: build-and-push-docker
+    needs: [build, build-and-push-docker]
     if:
       ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
       ( inputs.deploy  &&  always()) }}
     steps:
       - name: Check out
         uses: actions/checkout@v3
+      - uses: actions/download-artifact@v4
+        with:
+          name: plugin
+          path: .github/workflows/deploy/
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
