--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -22,7 +22,9 @@ jobs:
         run: yarn build
         working-directory: packages/apollo-shared
       - name: Lint codebase
-        run: yarn eslint --report-unused-disable-directives --max-warnings 0 --ext .js,.ts,.jsx,.tsx .
+        run:
+          yarn eslint --report-unused-disable-directives --max-warnings 0 --ext
+          .js,.ts,.jsx,.tsx .
       - name: Run Jest tests
         run: yarn test
       - name: Get latest JBrowse
@@ -36,6 +38,13 @@ jobs:
       - name: Run Cypress tests
         run: yarn run test:e2e
         working-directory: packages/jbrowse-plugin-apollo
+      - name: Start apollo
+        run: |
+          yarn --cwd packages/apollo-shared start &
+          yarn --cwd packages/apollo-collaboration-server start &
+      - name: Run CLI tests
+        run: python3 ./test/test.py TestCLI
+        working-directory: packages/apollo-cli
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
