--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,9 +22,9 @@ jobs:
     if: ${{ github.event_name == 'push' }}
     steps:
       - name: Check out
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Use Node.js 18.x
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: yarn
@@ -36,7 +36,8 @@ jobs:
       - name: Build plugin
         run: yarn build
         working-directory: packages/jbrowse-plugin-apollo
-      - uses: actions/upload-artifact@v4
+      - name: Upload built plugin files
+        uses: actions/upload-artifact@v4
         with:
           name: plugin
           path: |
@@ -48,9 +49,9 @@ jobs:
     if: ${{ github.event_name == 'push' }}
     steps:
       - name: Check out
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Use Node.js 18.x
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: yarn
@@ -97,17 +98,18 @@ jobs:
     environment: staging
     needs: [build, build-and-push-docker]
     if:
-      ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
-      ( inputs.deploy  &&  always()) }}
+      ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') || (
+      inputs.deploy  &&  always()) }}
     steps:
       - name: Check out
-        uses: actions/checkout@v3
-      - uses: actions/download-artifact@v4
+        uses: actions/checkout@v4
+      - name: Download built plugin files
+        uses: actions/download-artifact@v4
         with:
           name: plugin
           path: .github/workflows/deploy/
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
