Add more CLI functionality (#379)
* Temporary commit - work in progress

* Tmp commit: Refactor access

* Add query commands and refactor

* Without --require mocha doesn't run the global functions

* Add commands, autogenerated README, misc fixes

* Detect changes in cli and recreate readme

* Skip tests requiring token

* Test hook

* Test hook 2

* Test hook 3

* Test hook 4

* Add postinstall script; test hook

* Use cross-spawn

* Build before generating CLI readme

* Enable JSONC parser for prettier

* Commands to add assembly from gff and fasta, command to delete assembly

But note that there is a problem with loading files other than tiny ones

* Various CLI commands

* Fix dependency

* Add and rename commands

* Minor renaming and fixes

* Add --force flag

* Minor experimental edits

* Get all refeseqs in --assembly if --refseq is unset

* Resolve timeout issue in add-gff

Use http.request instead of fetch. Plus minor edits

* Use node-fetch; revise reading of input IDs

* Use root profile

* Add workflow for cli/ci

* Test workflow

* Run apollo in background

* Fix default profile not found

* Refactor to reduce code duplication

* Add sequence command

* Forgot to add file; fix test

* Reformat only

* Wrap sequences

* Use undici fetch

* Use dispatcher for timeouts

* Test large file

* Only run this test

* Fix profile

* Run all tests

* Decode sequence

* Start adding examples

* Revise command docs and some additional features

* Expand docs and a number fo edits

* Test on push

* Fix test

* Add command to get features by ID

* Add timeout

* Better timeout handling

* Small fix in doc

* `apollo feature get` returns a flat list instead of a list of lists

* Add managing of checks; linting

* Fix profile

* Fix profile again

* Improve error message; still rough but more informative

* Small edits and notes for automated setup



--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-cli",
-  "description": "CLI for managing an Apollo Collaboration Server",
+  "description": "Command line interface for the Apollo annotation server",
   "version": "0.0.0",
   "author": "Apollo Team",
   "repository": {
@@ -30,7 +30,7 @@
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
     "prepare": "yarn build",
-    "test": "mocha 'src/**/*.test.ts'",
+    "test": "mocha --require src/test/fixtures.ts 'src/**/*.test.ts'",
     "test:ci": "nyc mocha 'src/**/*.test.ts'",
     "version": "oclif readme && git add README.md"
   },
@@ -40,6 +40,7 @@
     "@inquirer/select": "^1.3.1",
     "@oclif/core": "^3.18.2",
     "@oclif/plugin-help": "^6.0.8",
+    "bson": "^6.3.0",
     "joi": "^17.7.0",
     "open": "^9.1.0",
     "tslib": "^2.3.1",
@@ -60,7 +61,8 @@
     "shx": "^0.3.3",
     "ts-node": "^10.3.0",
     "tsx": "^4.6.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "undici": "^6.7.0"
   },
   "oclif": {
     "helpOptions": {
@@ -73,6 +75,23 @@
       "@oclif/plugin-help"
     ],
     "repositoryPrefix": "<%- repo %>/blob/v<%- version %>/packages/apollo-cli/<%- commandPath %>",
-    "topicSeparator": " "
+    "topicSeparator": " ",
+    "topics": {
+      "assembly": {
+        "description": "Commands to handle assemblies"
+      },
+      "change": {
+        "description": "Commands to handle the log of changes made to the database"
+      },
+      "feature": {
+        "description": "Commands to handle features"
+      },
+      "refseq": {
+        "description": "Commands to handle reference sequences"
+      },
+      "user": {
+        "description": "Commands to handle users"
+      }
+    }
   }
 }
