--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -8,9 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Use Node.js 18.x
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: yarn
@@ -22,7 +22,9 @@ jobs:
         run: yarn build
         working-directory: packages/apollo-shared
       - name: Lint codebase
-        run: yarn eslint --report-unused-disable-directives --max-warnings 0 --ext .js,.ts,.jsx,.tsx .
+        run:
+          yarn eslint --report-unused-disable-directives --max-warnings 0 --ext
+          .js,.ts,.jsx,.tsx .
       - name: Run Jest tests
         run: yarn test
       - name: Get latest JBrowse
@@ -36,7 +38,14 @@ jobs:
       - name: Run Cypress tests
         run: yarn run test:e2e
         working-directory: packages/jbrowse-plugin-apollo
+      - name: Start apollo
+        run: |
+          yarn --cwd packages/apollo-shared start &
+          yarn --cwd packages/apollo-collaboration-server start &
+      - name: Run CLI tests
+        run: python3 ./test/test.py TestCLI
+        working-directory: packages/apollo-cli
       - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
