--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "@yarnpkg/types": "^4.0.0",
+    "cross-spawn": "^7.0.3",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
@@ -31,12 +32,12 @@
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "eslint-plugin-tsdoc": "^0.2.17",
     "eslint-plugin-unicorn": "^48.0.0",
-    "husky": "^8.0.3",
+    "husky": "^9.0.11",
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
     "jest": "^29.6.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.0",
+    "prettier": "^3.2.5",
     "prettier-plugin-import-sort": "^0.0.7",
     "react": "^18.2.0",
     "typescript": "^5.1.6"
