--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
     "jest": "^29.6.2",
+    "lint-staged": "^15.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "prettier-plugin-import-sort": "^0.0.7",
