--- a/.github/workflows/deploy_demo.yml
+++ b/.github/workflows/deploy_demo.yml
@@ -6,9 +6,9 @@ on:
       environment:
         required: true
         type: string
-    secrets:
-      GITHUB_TOKEN:
-        required: true
+    #secrets:
+    #  GITHUB_TOKEN:
+    #    required: true
 
 jobs:
   deploy:
