--- a/.github/workflows/deploy_demo.yml
+++ b/.github/workflows/deploy_demo.yml
@@ -15,7 +15,7 @@ jobs:
     name: Deploy to demo server
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
-    needs: build-and-push-docker
+    # needs: build-and-push-docker
     steps:
       - name: Check out
         uses: actions/checkout@v3
