--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -66,9 +66,9 @@ jobs:
   build-and-push-docker:
     name: Build and push Docker image
     runs-on: ubuntu-latest
-    if:
-      ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
-      inputs.publish }}
+    #if:
+    #  ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
+    #  inputs.publish }}
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
