--- a/packages/apollo-collaboration-server/package.json
+++ b/packages/apollo-collaboration-server/package.json
@@ -122,7 +122,5 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   },
-  "publishConfig": {
-    "access": "public"
-  }
+  "private": true
 }
