--- a/packages/apollo-common/package.json
+++ b/packages/apollo-common/package.json
@@ -8,7 +8,8 @@
   },
   "main": "./dist/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "prepack": "yarn build"
   },
   "dependencies": {
     "@apollo-annotation/apollo-schemas": "workspace:^",
