--- a/.github/workflows/publish_npm.yml
+++ b/.github/workflows/publish_npm.yml
@@ -15,8 +15,10 @@ jobs:
         with:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
+          scope: '@apollo-annotation'
       - run: yarn --immutable
       - run: |
+          yarn config set npmAuthToken ${{ secrets.NPM_TOKEN }}
           yarn workspaces foreach --no-private --all npm publish --tolerate-republish --tag devel 
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
