--- a/.github/workflows/publish_npm.yml
+++ b/.github/workflows/publish_npm.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '18.x'
+          cache: yarn
           registry-url: 'https://registry.npmjs.org'
           scope: '@apollo-annotation'
       - run: yarn --immutable
