--- a/packages/apollo-cli/Dockerfile
+++ b/packages/apollo-cli/Dockerfile
@@ -1,3 +1,3 @@
 FROM node:18-alpine3.19
-WORKDIR /app
-RUN npm install -g @apollo-annotation/apollo-cli
+RUN yarn global add @apollo-annotation/apollo-cli@devel
+ENTRYPOINT ["apollo"]
