--- a/packages/apollo-cli/package.json
+++ b/packages/apollo-cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@apollo-annotation/apollo-cli",
   "description": "Command line interface for the Apollo annotation server",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": "Apollo Team",
   "repository": {
     "type": "git",
@@ -44,6 +44,7 @@
     "joi": "^17.7.0",
     "open": "^9.1.0",
     "tslib": "^2.3.1",
+    "undici": "^6.7.0",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
@@ -61,8 +62,7 @@
     "shx": "^0.3.3",
     "ts-node": "^10.3.0",
     "tsx": "^4.6.2",
-    "typescript": "^5.1.6",
-    "undici": "^6.7.0"
+    "typescript": "^5.1.6"
   },
   "oclif": {
     "helpOptions": {
