--- a/packages/jbrowse-plugin-apollo/package.json
+++ b/packages/jbrowse-plugin-apollo/package.json
@@ -32,9 +32,9 @@
     "clean": "rimraf dist",
     "start": "yarn clean && npm-run-all --parallel start:watch start:server",
     "start:watch": "JB_NPM=false NODE_ENV=development rollup --config --watch",
-    "start:server": "serve --no-request-logging --cors --listen 9000 .",
+    "start:server": "serve --no-request-logging --cors --listen 9000 --no-port-switching .",
     "build": "yarn build:shared && yarn clean && rollup --config",
-    "browse": "serve --no-request-logging --listen 8999 .jbrowse",
+    "browse": "serve --no-request-logging --listen 8999 --no-port-switching .jbrowse",
     "test": "jest",
     "test:ci": "jest --coverage",
     "start:collab-cypress": "yarn workspace apollo-collaboration-server run cypress:start",
