Set APOLLO_DISABLE_CONFIG_CREATE to avoid issues with file permission

--- a/packages/apollo-cli/Dockerfile
+++ b/packages/apollo-cli/Dockerfile
@@ -1,12 +1,5 @@
 FROM node:18-alpine3.19
 
-ARG USER_ID
-ARG GROUP_ID
-
-RUN addgroup -g $GROUP_ID apolloUser
-RUN adduser -u $USER_ID -G apolloUser -g "" -D apolloUser
-
-USER apolloUser
-ENV PATH="/home/apolloUser/.yarn/bin:$PATH"
 RUN yarn global add @apollo-annotation/apollo-cli@devel
+ENV APOLLO_DISABLE_CONFIG_CREATE=1 
 ENTRYPOINT ["apollo"]
