--- a/.github/workflows/push_docker_cli.yml
+++ b/.github/workflows/push_docker_cli.yml
@@ -1,4 +1,4 @@
-name: Push
+name: Tmp apollo-cli docker
 
 on:
   push:
@@ -13,6 +13,8 @@ jobs:
     #  ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
     #  inputs.publish }}
     steps:
+      - name: Check out
+        uses: actions/checkout@v4
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
