--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -71,6 +71,8 @@ jobs:
     #  ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
     #  inputs.publish }}
     steps:
+      - name: Check out
+        uses: actions/checkout@v4
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
@@ -81,17 +83,6 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Apollo collaboration server image
-        uses: docker/build-push-action@v5
-        with:
-          platforms: linux/arm64/v8,linux/amd64
-          push: true
-          tags: ghcr.io/gmod/apollo-collaboration-server:development
-          outputs:
-            type=image,annotation-index.org.opencontainers.image.description=Apollo
-            collaboration server
-          cache-from: type=registry,ref=user/app:latest
-          cache-to: type=inline
       - name: Build and push Apollo CLI
         uses: docker/build-push-action@v5
         with:
@@ -102,6 +93,17 @@ jobs:
           outputs:
             type=image,annotation-index.org.opencontainers.image.description=
             Apollo CLI
+          cache-from: type=registry,ref=user/app:latest
+          cache-to: type=inline
+      - name: Build and push Apollo collaboration server image
+        uses: docker/build-push-action@v5
+        with:
+          platforms: linux/arm64/v8,linux/amd64
+          push: true
+          tags: ghcr.io/gmod/apollo-collaboration-server:development
+          outputs:
+            type=image,annotation-index.org.opencontainers.image.description=Apollo
+            collaboration server
           cache-from: type=registry,ref=user/app:latest
           cache-to: type=inline
   deploy:
